Opened 13 years ago
Closed 12 years ago
#7586 closed bug (fixed)
[Terminal] window title and menubar are not localized
Reported by: | diver | Owned by: | jackburton |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Applications/Terminal | Version: | R1/Development |
Keywords: | gci2011 | Cc: | |
Blocked By: | Blocking: | ||
Platform: | All |
Description
Change History (3)
comment:2 by , 13 years ago
I noticed that "Terminal" menubar sometimes changes to english version. Window title is still not localized.
Note:
See TracTickets
for help on using tickets.
The problem was checked during GCI 2011. I don't know exactly what do you mean by this problem, as it misses any description, but menubar actually changes with locale change (you have to restart Terminal) on hrev43238, so it's probably not a bug.