%T placeholder (localized Terminal name) for title mask

* %T placeholder added into the set, available for customizing main
  Terminal window title. It should be typically replaced by the
  application name localized for the currect system locale.
* Use B_TRANSLATE instead of B_TRANSLATE_SYSTEM_NAME for the first
  menu entry in the main TermWindow menu. The meaning of "Terminal"
  term in this menu is the "Terminal session" but not the "Terminal
  Application" so using separate catkeys entry for this menu item
  avoids this inconsistency in Terminal UI localization;
* Fixes #7586