src/apps/terminal/TermConst.cpp
@@ -25,6 +25,7 @@ const char* const kTooTipSetWindowTitlePlaceholders = B_TRANSLATE(
 	"\t%d\t-\tThe current working directory of the active process in the\n"
 	"\t\t\tcurrent tab. Optionally the maximum number of path components\n"
 	"\t\t\tcan be specified. E.g. '%2d' for at most two components.\n"
+	"\t%T\t-\tThe Terminal application name for the current locale.\n"
 	"\t%i\t-\tThe index of the window.\n"
 	"\t%p\t-\tThe name of the active process in the current tab.\n"
 	"\t%t\t-\tThe title of the current tab.\n"
